working brief version, now examining how plagin ParamConverter should work

--- a/modules/brief/templates/brief-list.html.twig
+++ b/modules/brief/templates/brief-list.html.twig
@@ -5,7 +5,7 @@
   </tr>
 {% for brief in briefs %}
   <tr>
-    <td> {{ brief.name }} </td>
+    <td> {{ brief.link }} </td>
   </tr>
 {% endfor %}
 </body>
